# opengl-starter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: cmake.yml
assets/: anim_test_ball.glb  anim_test_clock.glb  atelier.glb  billboard-healthbar.frag  billboard-healthbar.vert  billboard-image.frag  billboard-image.vert  bloom-extract-brights.frag  blur.frag  cube.frag  cube.glb  cube.vert  cubeDepth.frag  debug-draw.frag  debug-draw.vert  decal.frag  decal.vert  gaussian-blur.frag  grass.frag  grass.vert  imgui.frag  imgui.vert  particles.frag  particles.vert  post.frag  post.vert  ps_default.ps  ps_notes.ps  ps_torch.json  ps_torch.ps  robotomono.fnt  robotoregular.fnt  sdf_font.frag  sdf_font.vert  ssao.frag  terrain.frag  terrain.vert  terrain_tess.tesc  terrain_tess.tese  terrain_tess.vert  (+1 more)
opengl_starter/: Animation.cpp  Animation.h  Bloom.h  Buffer.h  CMakeLists.txt  Camera.h  Common.h  DebugDraw.cpp  DebugDraw.h  Decal.h  Font.h  Framebuffer.h  GltfLoader.cpp  GltfLoader.h  Grass.cpp  Grass.h  ImGuiHandler.cpp  ImGuiHandler.h  Mesh.h  Node.h  ParticleSystem.cpp  ParticleSystem.h  SSAO.h  Shader.h  Terrain.cpp  Terrain.h  TextRenderer.cpp  TextRenderer.h  Texture.h  Utils.h  Window.h  opengl_starter.cpp
